# ECE1140_Conductors

./: Authority.h  Block.cpp  Block.h  CTC.cpp  CTC.hpp  ConductorsMain.cpp  Conductors_TrainSystem.pro  FinalSystem.pro  PLCController.cpp  PLCController.h  PLC_Grammar_Guide.txt  README.md  SWTrackController.cpp  SWTrackController.h  SerialPort.cpp  Track.cpp  Track.h  TrackNodes.cpp  Train.pro  Train_Module.pro  Wayside.cpp  Wayside.h  WaysideManager.cpp  WaysideManager.h  Wayside_HW.cpp  Wayside_HW.h  ctcwindow.cpp  ctcwindow.h  finalsystem.cpp  finalsystem.h  greenLine.txt  greenLine2.txt  greenLine2TestRunResults.txt  hwtcinterface.cpp  main.cpp  redLine.txt  swtcinterface.cpp  swtcinterface.h  swtcinterface.ui  testTrack.txt  (+20 more)
CTC/: Authority.h  Block.cpp  Block.h  Branch.h  CMakeLists.txt  CTC.cpp  CTC.hpp  CTC.pro  ScheduleManager.cpp  ScheduleManager.h  TrackMap.cpp  TrackMap.hpp  TrackNodes.cpp  TrackNodes.h  TrainTracker.cpp  TrainTracker.h  WayStruct.h  WaysideManager.cpp  WaysideManager.h  ctcwindow.cpp  ctcwindow.h  ctcwindow.ui  main.cpp
CTCmodule/: Authority.h  Block.cpp  Block.h  Branch.h  CMakeLists.txt  CTC.cpp  CTC.hpp  Node.hpp  ScheduleManager.cpp  ScheduleManager.h  TrackMap.hpp  TrackNodes.cpp  TrackNodes.h  WayStruct.h  WaysideManager.cpp  WaysideManager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Conductors_TrainSystem/: Block.cpp  CTC.cpp  CTC.hpp  Clock.h  ConductorsMain.cpp  Conductors_TrainSystem.pro  Conductors_TrainSystem.pro.user.7fe56a3  Conductors_TrainSystem.pro.user.c1e86af  PLCController.cpp  SWTrackController.cpp  SWTrackController.h  SerialPortTrack.cpp  Track.cpp  Track.h  TrackMap.cpp  TrainTracker.cpp  TrainTracker.h  Wayside.cpp  Wayside.h  WaysideManager.h  Wayside_HW.cpp  Wayside_HW.h  ctcwindow.cpp  ctcwindow.h  ctcwindow.ui  hwtcinterface.cpp  hwtcinterface.h  hwtcinterface.ui  redLine.txt  string_utils.hpp  swtcinterface.cpp  swtcinterface.h  trackmodel.cpp  trackmodel.h  trackmodel.ui  waysidewin.cpp  waysidewin.h  waysidewin.ui
HWTrackController/: Authority.h  Block.cpp  Block.h  Detection_TestUI.ino  HWTCInterface.pro  HWTrackConArdu_main.ino  HWTrackController.cpp  HWTrackController.h  PLCController.cpp  WayStruct.h  Wayside.cpp  Wayside.h  Wayside_HW.cpp  Wayside_HW.h  hwtcinterface.cpp  hwtcinterface.h  hwtcinterface.ui  joystick.ino  main.cpp  main_test.cpp  serialCommunication.cpp  serialCommunication.h  userInput.ino  userInput_buttons.ino
HWTrainControllerMain_Arduino/: HWTrainControllerMain_Arduino.ino  Joystick.ino  Power.ino  Receiver.ino  Transmitter.ino
MBO/: GPS_mapping.txt  MBO.pro  SMBA.cpp  SMBA.h  TrackLayout.cpp  TrackLayout.h  drivers.h  greenline_v2.csv  main.cpp  mbo.cpp  mbo.h  mbo.ui
SWTrackController/: Block.cpp  Block.h  Conductors_Train_Sim.cpp  FullPLC.txt  PLCController.cpp  PLCController.h  PLC_Grammar_Guide.txt  SWTrackController.cpp  SWTrackController.h  SwitchPLC.txt  TestProgram.cpp  TrackController.pro  WayStruct.h  Wayside.cpp  Wayside.cpp.bak  Wayside.h  plcTest.txt  swtcinterface.cpp  swtcinterface.h  swtcinterface.ui  swtcunittests.cpp  swtcunittests.h  waysidemain.cpp  waysidewin.cpp  waysidewin.h  waysidewindow.ui
Testing/: SWTrainControllerTestFile.h
TrainControlSW/: SWTCTestFile.h  SWTrainController.cpp  SWTrainController.h  TrainControllerSignalHandler.cpp  UITrainController.pro  UITrainController.pro.user.0d2b4a8  testui.cpp  testui.ui  uiswtraincontroller.cpp  uiswtraincontroller.h  uiswtraincontroller.ui  universaltimer.h
TrainModel/: Train.pro  Train.pro.user.7cf3e41  main.cpp  trainmaker.cpp  trainmaker.h  trainmodel.cpp  trainmodel.h  trainui.cpp  trainui.h  trainui.ui  trainui.ui.autosave
TrainSystem/: Block.h  ConductorsMain.cpp  Conductors_TrainSystem.pro  Track.cpp  Track.h  ctcwindow.ui  hwtcinterface.cpp  trackmodel.cpp  waysidewin.h
build-Train-Desktop_Qt_5_15_2_MSVC2015_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_uiswtraincontroller.h
build-Train-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_hwtrainui.h  (+3 more)
(+242 files in other folders)
